--- a/database.bib
+++ b/database.bib
@@ -52,7 +52,7 @@
 @Article{ZaTu16,
     Author = {S. A. A. Zaidi and A. Tuoheti and M. Martina and G. Masera},
     journal = {IEEE Design Test}, 
-    title = {FPGA Accelerator of Algebraic Quasi Cyclic LDPC Codes for lt;sc gt;nand lt;/sc gt; Flash Memories},
+    title = {FPGA Accelerator of Algebraic Quasi Cyclic LDPC Codes for nand Flash Memories},
     year = {2016},
     volume = {33},
     number = {6},
@@ -198,4 +198,11 @@ M. Tanner. “A recursive approach to low complexity codes”. In coding and mod
     volume = {27},
     year = {1948},
     pages = {379-423, 623-656}
+}
+@Unpublished{YoGa12,
+    author = {Jung H. Yoon and Gary A. Tressler},
+    title = {Advanced Flash Technology Status, Scaling Trends and Implications to Enterprise SSD Technology Enablement},
+    year = {2012},
+    month = {August},
+    journal = {Flash Memory Summit 2012}
 }
